--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -19,7 +19,7 @@
         </div>
      
         <div class="actions" >
-          <%= f.submit "Sumbmit", class:"btn btn-light"%>
+          <%= f.submit "Sumbmit", class:"login100-form-btn"%>
         </div>
       <% end %>
     </div>
