--- a/app/views/user_profile/home.html.erb
+++ b/app/views/user_profile/home.html.erb
@@ -279,7 +279,7 @@
   <div class="modal-dialog modal-content">
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-      <h3>Edit User</h3>
+      <h3>Create Game</h3>
     </div>
     <div class="modal-body"></div>
   </div>
