--- a/app/views/manage/games/index.html.erb
+++ b/app/views/manage/games/index.html.erb
@@ -1,4 +1,52 @@
-
+<aside class="main-sidebar">
+  <!-- sidebar: style can be found in sidebar.less -->
+  <section class="sidebar">
+    <!-- Sidebar user panel -->
+    <div class="user-panel">
+      <div class="pull-left image">
+        <img src="../../dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+      </div>
+      <div class="pull-left info">
+        <p>Alexander Pierce</p>
+        <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
+      </div>
+    </div>
+    <%= form_tag manage_user_search_user_path(current_user.id), :method => 'get', :class => "sidebar-form" do %>
+      <div class="input-group">
+          <span class="input-group-btn">
+          <%= text_field_tag :search_user, params[:search_user], :value => "", :class => "form-control", placeholder: "Search..." %>
+            <%= submit_tag id: "search-btn", class: 'btn btn-flat' %><i class="fa fa-search"></i>
+        </span>
+      </div>
+    <% end %>
+    <!-- /.search form -->
+    <!-- sidebar menu: : style can be found in sidebar.less -->
+    <ul class="sidebar-menu" data-widget="tree">
+      <li class="header">MAIN NAVIGATION</li>
+      <li>
+        <a href="#">
+          <i class="fa fa-th"></i> <span>Report</span>
+        </a>
+      </li>
+      <li class="treeview active menu-open">
+        <a href="#">
+          <i class="fa fa-files-o"></i>
+          <span>Manage</span>
+          <span class="pull-right-container">
+            <span class="label label-primary pull-right">4</span>
+          </span>
+        </a>
+        <ul class="treeview-menu">
+          <li ><a href="#"><i class="fa fa-circle-o"></i> Manage User</a></li>
+          <li class="active"><%=link_to manage_games_path do%>
+            <i class="fa fa-circle-o"></i> Manage Game
+            <%end%>
+          </ul>
+        </li>
+      </ul>
+  </section>
+  <!-- /.sidebar -->
+</aside>
 <div class="content-wrapper">
   <!-- Content Header (Page header) -->
   <section class="content-header">
@@ -96,14 +144,6 @@
 
   <!-- /.content -->
 </div>
-
-<footer class="main-footer">
-  <div class="pull-right hidden-xs">
-    <b>Version</b> 2.4.0
-  </div>
-  <strong>Copyright &copy; 2014-2016 <a href="https://adminlte.io">Almsaeed Studio</a>.</strong> All rights
-  reserved.
-</footer>
 
 <aside class="control-sidebar control-sidebar-dark">
   <!-- Create the tabs -->
